# ts-two-locus-proto

./: .gitignore  .pylintrc  2-site-stats.ipynb  README.md  Validation.ipynb  dev-conda-env.yml  index.debug.c.8c66eaa79e4863c3b29bb171a7ebd47b.html  index.functions.html  index.html  index.main.c.2045016cb90d1e65d71c2407a2570927.html  index.prototype.c.78251ef0d1e3673fd874473d452d1226.html  index.summary_functions.c.eb2eda4580ff1b9f7cc2569a47c7dc99.html  index.test_prototype.c.7cbb0ea1647cb523573bd0b835e7556d.html  index.test_stats.c.911b0d26275107aa72533927882b86b9.html  index.testlib.c.0a5c2ddb3bfec3356d45faf3a67c4072.html  main.py  pyproject.toml  run-doctests
benchmarks/: main.c  meson.build
benchmarks/subprojects/: tskit.wrap
benchmarks/subprojects/packagefiles/tskit/: core_optimization.patch  diff_be0a18d_cd18eda.patch  diff_core_speedup.patch  diff_fd72573_be0a18d.patch  diff_proposed_tree_changes.patch  diff_simplify_traversal-minor-refactor.patch.bak  diff_simplify_traversal.patch  fd72573_b3a005b.patch
c/: debug.c  main.c  meson.build  pairs-with-replacement.c  prototype.c  prototype.h  summary_functions.c  summary_functions.h  test_prototype.c  test_stats.c  test_stats_truth.h  testlib.c  testlib.h
c/subprojects/: cunit.wrap  tskit.wrap
c/subprojects/packagefiles/cunit/CUnit/Sources/: meson.build
design-document/: .gitignore  ProposalFigure.ipynb  compile-loop  main.tex  references.bib
notebooks/: BitShit.ipynb  BranchEfficient-V1-Validation.ipynb  BranchEfficient-V1.ipynb  BranchEfficient-V2.ipynb  BranchEfficient-groundup.ipynb  BranchEfficient.ipynb  BranchEfficientDraft.ipynb  BranchEfficientFinal.ipynb  BranchNaive.ipynb  BranchNaiveScratch.ipynb  BranchNumericalValidation-checkpoint-Copy1.ipynb  BranchNumericalValidation-checkpoint.ipynb  BranchNumericalValidation.ipynb  BranchStatisticsPython.ipynb  CompareThreeNormingStrategies.ipynb  DemonstrateCorrectness.ipynb  EfficientSingleTreeTraversal.ipynb  GenerateComplexTree.ipynb  Moments.ipynb  SampleAccumulation.ipynb  StackBasedOneLocus.ipynb  StackBasedTwoLocus.ipynb  TestCases.ipynb  TestTrees.ipynb  Windows.ipynb
test/: conftest.py  test_ld_proto.py
(+6 files in other folders)
